M       vbm_surf_resamp.m
M       vbm_surf_resamp_freesurfer.m
M       vbm_surf_resample.m

Renamed ?h.sphere.gii and ?h.central.gii to ?h.central.freesurfer.gii
and ?h.sphere.freesurfer.gii and changed resp. files.

------------------------------------------------------------------------
r728 | gaser | 2015-09-14 15:28:55

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_stools.m

(1) Added expert modus 2 for experimental functions.
(2) Changed some file selection settings according to expert modus.

------------------------------------------------------------------------
r729 | gaser | 2015-09-14 15:44:30

M       CHANGES.txt
M       cg_vbm_batch.sh
M       cg_vbm_tools.m
M       cg_vbm_write.m
M       vbm_vol_groupwise_ls.m
M       vbm_vol_sanlm.m
M       vbm_vol_series_align.m

(1) Removed vbm-dir option in cg_vbm_batch.sh and updated help test.
(2) Some cosmetic changes to cg_vbm_write.m, vbm_vol_sanlm.m
    vbm_vol_groupwise_ls.m, and cg_vbm_tools.m
------------------------------------------------------------------------
r730 | gaser | 2015-09-16 11:34:37

M       CHANGES.txt
M       cg_vbm_longitudinal.m
M       cg_vbm_longitudinal_multi.m
M       cg_vbm_longitudinal_multi_run.m
M       vbm_vol_groupwise_ls.m
M       vbm_vol_series_align.m

Reorganized and updated longitudinal batch that caused problems with 
column cellstr. Thanks to Yang Ding for pointing to that issue. 
 

------------------------------------------------------------------------
r731 | gaser | 2015-09-16 17:18:08

M       CHANGES.txt
M       cg_vbm_longitudinal.m
M       cg_vbm_longitudinal_multi.m
M       cg_vbm_longitudinal_multi_run.m
M       html/vbm12.html
M       vbm_vol_groupwise_ls.m
M       vbm_vol_series_align.m

Reorganized and updated longitudinal batch that caused problems with 
column cellstr. Thanks to Yang Ding for pointing to that issue. 
 

------------------------------------------------------------------------
r732 | gaser | 2015-09-17 10:01:45